--- a/bucket-proxy/pom.xml
+++ b/bucket-proxy/pom.xml
@@ -13,20 +13,32 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bucket-proxy</name>
 	<description>Demo project for Spring Boot</description>
+
+
+
 	<properties>
 		<java.version>11</java.version>
+		<gcp-starter-storage.version>1.2.8.RELEASE</gcp-starter-storage.version>
 	</properties>
+
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-storage</artifactId>
+			<version>${gcp-starter-storage.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
